--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
+  image_picker: ^0.8.9
+  crop_your_image: ^2.0.0
+  firebase_storage: ^12.4.4
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
